@@ -42,6 +42,9 @@
 	Fixed error reporting on builtin function argument parsing in rhs of :let
 	expression.  Thanks to Svyatoslav Mishyn (a.k.a. juef).
 
+	Fixed truncating viewed file on 'wrap', 'tabstop' > 2 and line wrapping
+	caused by tabulation.  Thanks to Svyatoslav Mishyn (a.k.a. juef).
+
 0.7.8 to 0.8-beta
 
 	Removed per-view last search pattern.  Don't worry, you probably won't
